--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.18.1",
     "next": "15.3.3",
